(backend) search for salary